# c-visual-sort

./: CMakeLists.txt  README.md  cli.c  cli.h  list.c  list.h  main.c  visual-sort.c  visual-sort.h
src/: cli.c  cli.h  list.c  list.h  main.c  visual-sort.c  visual-sort.h
